fix LoadingContainer z-index

--- a/projectforge-webapp/src/components/design/loading-container/LoadingContainer.module.scss
+++ b/projectforge-webapp/src/components/design/loading-container/LoadingContainer.module.scss
@@ -3,7 +3,7 @@ div.loadingContainer {
   min-height: 100px;
 
   div.loadingOverlay {
-    z-index: 9999;
+    z-index: 999;
     position: absolute;
     width: 100%;
     height: 100%;
